[gd_scene load_steps=6 format=3 uid="uid://bc7x4wyxclnv3"]

[ext_resource type="Script" path="res://Scripts/ExitDoor.gd" id="1_2ty6v"]
[ext_resource type="PackedScene" uid="uid://bphbcbja2siyf" path="res://Models/door.glb" id="2_3wpdg"]
[ext_resource type="PackedScene" uid="uid://ft81uo6qvpnt" path="res://System/Interaction/Interactable.tscn" id="3_o5owf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nt5l1"]
size = Vector3(0.128723, 1.06832, 0.523178)

[sub_resource type="BoxShape3D" id="BoxShape3D_mek5i"]
size = Vector3(0.128723, 1.06832, 0.523178)

[node name="DoorExit" type="Area3D"]
script = ExtResource("1_2ty6v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.574332, 0)
shape = SubResource("BoxShape3D_nt5l1")

[node name="door" parent="." instance=ExtResource("2_3wpdg")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Interactable" parent="." instance=ExtResource("3_o5owf")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05176e-05, 0.580692, 0.00693512)
shape = SubResource("BoxShape3D_mek5i")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
